--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
   <body class="bg-gray-900 text-gray-100 selection:bg-amber-500 selection:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
